Add configuration option to inject previous messages in email threads
- Introduced a new setting in the configuration to control the injection of previous messages as quotes in emails.
- Updated the EmailSubscriber to utilize this setting when generating email content.
- Enhanced the form and translation files to support the new configuration option.

--- a/Views/Config/form.html.twig
+++ b/Views/Config/form.html.twig
@@ -41,6 +41,11 @@
                     {{ form_row(form.emailthreads_include_unsubscribe) }}
                 </div>
             </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    {{ form_row(form.emailthreads_inject_previous_messages) }}
+                </div>
+            </div>
         </div>
         <div class="form-group">
             {{ form_row(form.save) }}
